# flask

./: docker-compose.yml
app/: Pipfile  alembic.ini  app.py  config.py  handlers.py  logger.py  pyproject.toml  requirements.txt  routes.py
app/alembic/: env.py
app/alembic/versions/: 3573bc9085b4_added_user_table.py
app/cli/: __init__.py  vk_parser.py
app/forms/: AccountForms.py  _BaseForm.py  __init__.py
app/models/: User.py  _Base.py  __init__.py
app/repositories/: UserRepository.py
app/staff/: __init__.py  _redis.py
app/templates/: _base.html  login.html  registration.html
app/templates/IndexView/: index.html
app/views/: IndexView.py  LoginView.py  RegistrationView.py  TestView.py  __init__.py
docker/python/: Dockerfile
