[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "1.4.0"
bcrypt = "3.1.7"
blinker = "1.4"
cffi = "1.14.0"
click = "7.0"
dependency-injector = "3.15.6"
flask-classy = "0.6.10"
flask-login = "0.5.0"
flask-mail = "0.9.1"
flask = "1.1.1"
itsdangerous = "1.1.0"
jinja2 = "2.11.1"
mako = "1.1.1"
markupsafe = "1.1.1"
psycopg2 = "2.8.4"
pycparser = "2.19"
python-dateutil = "2.8.1"
python-dotenv = "0.11.0"
python-editor = "1.0.4"
six = "1.14.0"
sqlalchemy = "1.3.13"
werkzeug = "1.0.0"
flask_wtf = "^0.14.3"
redis = "^3.4.1"
celery = "^4.4.2"
flask-cli = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
